infra/deploy-feedback-processor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-processor-app
  labels:
    app: feedback-processor
    type: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-processor
  template:
    metadata:
      labels:
        app: feedback-processor
        type: platform
    spec:
      containers:
      - name: feedback-processor-ctr
        imagePullPolicy: Always
        image: abh1sek/appsec-workflow-feedback-processor
