infra/deploy-api-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-app
  labels:
    app: api-service
    type: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
        type: platform
    spec:
      containers:
      - name: api-service-ctr
        imagePullPolicy: Always
        image: abh1sek/appsec-workflow-api-service
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-service
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
